[tool.poetry]
name = "chrispy"
version = "0.2.0"
description = ""
authors = ["PythonFZ <fabian.zills@web.de>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
numpy = "^1.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
